--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@unocss/reset": "^0.52.1",
     "axios": "^1.4.0",
     "echarts": "^5.4.2",
     "element-plus": "^2.3.5",
@@ -28,6 +29,7 @@
     "eslint-plugin-vue": "^9.11.0",
     "postcss-pxtorem": "^6.0.0",
     "prettier": "^2.8.8",
+    "unocss": "^0.52.1",
     "vite": "^4.3.5"
   }
 }
