--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "medical-instrument-frontend",
+  "name": "frontend-seed_vue3_js",
   "version": "0.0.0",
   "private": true,
   "scripts": {
