--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 # .env.production
 NODE_ENV = production
-VITE_APP_API_BASE_URL = "https://tzzxcxcx.ntjsjg.com:8001"
+VITE_API_BASE_URL = "https://tzzxcxcx.ntjsjg.com:8001"
